chore(auth): delete login and register
