# internal/routes/auth.go
@@ -31,36 +31,12 @@ func (s *routerImpl) HandleGoogleMobileSignIn(c *gin.Context) {
 	s.googleMobile.SignIn(c)
 }
 
-func (s *routerImpl) HandleLocalAuth(c *gin.Context) {
-	if s.local == nil {
-		c.JSON(http.StatusServiceUnavailable, api.NewError("service unavailable", api.CodeServerError))
-		return
-	}
-	s.local.SignIn(c)
-}
-
 func (s *routerImpl) HandleLogout(c *gin.Context) {
 	if s.logout == nil {
 		c.JSON(http.StatusServiceUnavailable, api.NewError("service unavailable", api.CodeServerError))
 		return
 	}
 	s.logout.HandleLogout(c)
-}
-
-func (s *routerImpl) HandleRegister(c *gin.Context) {
-	if s.local == nil {
-		c.JSON(http.StatusServiceUnavailable, api.NewError("service unavailable", api.CodeServerError))
-		return
-	}
-	s.local.Register(c)
-}
-
-func (s *routerImpl) HandleVerifyEmail(c *gin.Context) {
-	if s.local == nil {
-		c.JSON(http.StatusServiceUnavailable, api.NewError("service unavailable", api.CodeServerError))
-		return
-	}
-	s.local.VerifyEmail(c)
 }
 
 func (s *routerImpl) HandleForgotPassword(c *gin.Context) {
